syntax = "proto3";

package blackfriday.protobuf;

message ProductTags {
  int64 product_id = 1;
  repeated string tags = 2;
}

message PaymentRequestV1 {
  int64 orderId = 1;
  int64 userId = 2;
  int64 amountKRW = 3;
  int64 paymentMethodId = 4;
}

message PaymentResultV1 {
  int64 orderId = 1;
  int64 paymentId = 2;
  string paymentStatus = 3;
}

message DeliveryRequestV1 {
  int64 orderId = 1;
  string productName = 2;
  int64 productCount =3;
  string address = 4;
}

message DeliveryStatusUpdateV1 {
  int64 orderId = 1;
  int64 deliveryId = 2;
  string deliveryStatus = 3;
}